--- a/index.html
+++ b/index.html
@@ -1,105 +1,105 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>Celal Demirsoy - CV</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f6f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 900px;
-            margin: 30px auto;
-            background: white;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.1);
-        }
-        .profile {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-        .profile img {
-            width: 140px;
-            height: 140px;
-            border-radius: 100px;
-            object-fit: cover;
-            border: 4px solid #007bff;
-        }
-        h1 {
-            margin-bottom: 5px;
-        }
-        h2 {
-            color: #007bff;
-            border-bottom: 2px solid #eee;
-            padding-bottom: 5px;
-            margin-top: 40px;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        .bar {
-            background-color: #ddd;
-            border-radius: 10px;
-            overflow: hidden;
-            margin-bottom: 5px;
-        }
-        .bar-fill {
-            background-color: #007bff;
-            height: 12px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Celal Demirsoy - CV</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    .container {
+      max-width: 900px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 40px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      border-radius: 10px;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .section {
+      margin-bottom: 30px;
+    }
+    .contact {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="profile">
-            <img src="profil.jpg" alt="Celal Demirsoy">
-            <div>
-                <h1>Celal Demirsoy</h1>
-                <p><strong>Telefon:</strong> +90 506 024 22 72<br>
-                <strong>Email:</strong> celal.dmrsy@gmail.com<br>
-                <strong>Konum:</strong> İstanbul<br>
-                <strong>Üniversite:</strong> Esenyurt Üniversitesi (Bilgisayar Mühendisliği, 2. Sınıf)</p>
-            </div>
-        </div>
-
-        <h2>Hakkımda</h2>
-        <p>Merhaba! Ben Celal Demirsoy. Bilgisayar mühendisliği 2. sınıf öğrencisiyim. Kodlamaya ve yeni teknolojilere büyük ilgi duyuyorum. 
-        Erasmus kapsamında 1 Aralık 1918 Alba Iulia Üniversitesi’nde eğitim gördüm. Takım çalışmasına uyumlu, öğrenmeye açık ve çözüm odaklı biriyim.</p>
-
-        <h2>Dil Seviyeleri</h2>
-        <p>İngilizce</p>
-        <div class="bar"><div class="bar-fill" style="width: 70%;"></div></div>
-        <p>Romence</p>
-        <div class="bar"><div class="bar-fill" style="width: 40%;"></div></div>
-
-        <h2>Yazılım Bilgisi</h2>
-        <ul>
-            <li>Java, C#, C++, Python (öğreniyor)</li>
-            <li>HTML, CSS</li>
-            <li>MS Office uygulamaları</li>
-        </ul>
-
-        <h2>Projeler</h2>
-        <ul>
-            <li>Teknofest için takım projesi (devam ediyor)</li>
-            <li>TÜBİTAK 2209-A destekli proje</li>
-            <li>Yeni küçük projeler başvuru aşamasında</li>
-        </ul>
-
-        <h2>Hobiler</h2>
-        <ul>
-            <li>Kodlama ve yeni programlama dilleri öğrenme</li>
-            <li>Futbol, satranç, içerik editörlüğü</li>
-            <li>Teknoloji haberlerini takip etme, ekip çalışmaları</li>
-            <li>Film/dizi izlemek, blog okumak</li>
-        </ul>
+  <div class="container">
+    <div class="contact">
+      <h1>Celal Demirsoy</h1>
+      <p>📞 +90 506 024 22 72 | ✉️ celal.dmrsy@gmail.com</p>
+      <p>📍 İstanbul, Türkiye</p>
     </div>
+
+    <div class="section">
+      <h2>🎓 Eğitim</h2>
+      <ul>
+        <li><strong>İstanbul Esenyurt Üniversitesi</strong><br>
+        Bilgisayar Mühendisliği (2. Sınıf – %100 Burslu)<br>2023 – Devam ediyor</li>
+        <li><strong>1 December 1918 Alba Iulia Üniversitesi</strong> (Romanya)<br>
+        Erasmus Öğrencisi – 1 Dönem, 2024</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>🧠 Hakkımda</h2>
+      <p>Öğrenmeye açık, analitik düşünme becerisi gelişmiş ve takım çalışmasına yatkın bir bilgisayar mühendisliği öğrencisiyim. Yazılım geliştirme alanında kendimi geliştiriyor, yeni teknolojilere ilgi duyuyorum. Erasmus deneyimimle birlikte farklı kültürlerle çalışma tecrübesi edindim.</p>
+    </div>
+
+    <div class="section">
+      <h2>💻 Teknik Beceriler</h2>
+      <ul>
+        <li>Java, C#, C++, HTML, CSS</li>
+        <li>Öğrenmekte: Python</li>
+        <li>MS Office (Word, Excel, PowerPoint)</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>🚀 Projeler</h2>
+      <ul>
+        <li>TEKNOFEST yarışması için takım projesi</li>
+        <li>TÜBİTAK 2209-A proje deneyimi</li>
+        <li>Küçük çaplı bireysel yazılım projeleri</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>🌐 Yabancı Diller</h2>
+      <ul>
+        <li>İngilizce: B2</li>
+        <li>Romence: A2</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>🎯 Kariyer Hedefi</h2>
+      <p>Alanımla ilgili henüz bir iş veya staj deneyimim bulunmamaktadır. Bu nedenle sektörü daha yakından tanımak, bilgi ve becerilerimi uygulamalı olarak geliştirmek amacıyla staj yapmayı hedefliyorum.</p>
+    </div>
+
+    <div class="section">
+      <h2>🧩 İlgi Alanları / Hobiler</h2>
+      <ul>
+        <li>Yeni programlama dilleri öğrenmek</li>
+        <li>Yapay zeka ve siber güvenlik konularını takip etmek</li>
+        <li>Futbol, satranç ve takım oyunları</li>
+        <li>Video düzenleme ve dijital içerik üretimi</li>
+        <li>Teknoloji belgeselleri ve podcast'ler dinlemek</li>
+        <li>Yabancı kültürleri tanımak ve dil pratiği yapmak</li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
